# finpy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report---.md  feature-request---.md
nb/: finpy.ipynb
