[metadata]
name = finpy
version = 0.0.1
license = Apache-2.0
description = Python package for a financial analysis project
long_description = file: README.md
author = IBasterreche
author_email = <Optional: author e-mail>
classifiers=
   <classifier 1>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src